[package]
name = "banking"
version = "0.1.0"
edition = "2021"
default-run = "banking"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
serde = { version = "1.0.85", features = ["derive"] }
serde_json = "1.0.85"
rusqlite = { version = "0.28.0", features = ["bundled"] }

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
